test/corpus/basic.txt
====================
Function with body
====================

fn main(): () {
    let x = "hello"
    x!
}

---

(source_file
  (definition
    (function_declaration
      name: (identifier)
      parameters: (parameter_list)
      return_type: (type (unit_type))
      body: (block
        (statement
          (let_declaration
            name: (identifier)
            value: (expression (string_literal))))
        (statement
          (injection
            (expression (identifier))))))))
